# tooz

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  bindep.txt  functions.sh  openstack-common.conf  pyproject.toml  requirements-py3.txt  requirements.txt  run-examples.sh  run-tests.sh  run_tests.sh  setup-consul-env.sh  setup-etcd-env.sh  setup-memcached-env.sh  setup-mysql-env.sh  setup-postgresql-env.sh  setup-redis-env.sh  setup-sentinel-env.sh  setup-test-env.sh  setup-zookeeper-env.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: compatibility.rst  conf.py  developers.rst  drivers.rst  index.rst  install.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst
doc/source/tutorial/: coordinator.rst  group_membership.rst  hashring.rst  index.rst  leader_election.rst  lock.rst  partitioner.rst
doc/source/user/: compatibility.rst  drivers.rst  index.rst
doc/source/user/tutorial/: coordinator.rst  group_membership.rst  hashring.rst  index.rst  leader_election.rst  lock.rst  partitioner.rst
examples/: coordinator.py  coordinator_heartbeat.py  group_membership.py  group_membership_watch.py  hashring.py  leader_election.py  lock.py  partitioner.py
playbooks/: stop-redis.yaml
playbooks/legacy/tooz-tox-py27-consul/: run.yaml
playbooks/legacy/tooz-tox-py27-etcd/: run.yaml
playbooks/legacy/tooz-tox-py27-etcd3/: run.yaml
playbooks/legacy/tooz-tox-py27-etcd3gw/: run.yaml
playbooks/legacy/tooz-tox-py27-memcached/: run.yaml
playbooks/legacy/tooz-tox-py27-mysql/: run.yaml
playbooks/legacy/tooz-tox-py27-postgresql/: run.yaml
playbooks/legacy/tooz-tox-py27-redis/: run.yaml
playbooks/legacy/tooz-tox-py27-sentinel/: run.yaml
playbooks/legacy/tooz-tox-py27-zookeeper/: run.yaml
playbooks/legacy/tooz-tox-py35-consul/: run.yaml
playbooks/legacy/tooz-tox-py35-etcd/: run.yaml
playbooks/legacy/tooz-tox-py35-etcd3/: run.yaml
playbooks/legacy/tooz-tox-py35-etcd3gw/: run.yaml
playbooks/legacy/tooz-tox-py35-memcached/: run.yaml
playbooks/legacy/tooz-tox-py35-mysql/: run.yaml
playbooks/legacy/tooz-tox-py35-postgresql/: run.yaml
playbooks/legacy/tooz-tox-py35-redis/: run.yaml
playbooks/legacy/tooz-tox-py35-sentinel/: run.yaml
playbooks/legacy/tooz-tox-py35-zookeeper/: run.yaml
releasenotes/notes/: add-consul-acl-support-2f0869681129f7e7.yaml  add-k8s-lock-support-5c9e5c6d4bbe8405.yaml  bug-2012226-67752e8cae8489ee.yaml  bug-2056656-f71dca8a61138f95.yaml  consul-heartbeat-support-3ec69e2ace537dc1.yaml  deprecate-consul-def64518dee552e2.yaml  deprecate-etcd-239e1f0ebc242737.yaml  deprecate-etcd3-driver-551608037d79222b.yaml  deprecate-kazoo-eventlet-handler-4f931cf058f38200.yaml  deprecate-kubernetes-driver-0179640eadb3c504.yaml  deprecate-postgresql-1ed79808e4ad7ccc.yaml  deprecate-zake-driver-eee8fcdfc5a88907.yaml  drop-python-2-7-73d3113c69d724d6.yaml  etcd-3.4-eee8300c942a1263.yaml  etcd3-etcd3gw-tls-support-618ab207706e67af.yaml  etcd3-group-support-b039cf19f4a268a3.yaml  etcd3gw-api-version-discovery-3e9943c73fae48d4.yaml  etcd3gw-group-support-598832a8764a8aa6.yaml  etcd3gw_create_new_lease_if_expired_during_refresh-1d631d36c21ea28c.yaml  fix-redis-socket_keepalive-type-32b41b746f426efb.yaml  hashring-0470f9119ef63d49.yaml  hashring-algo-8a279397b8ff8a6a.yaml  join_group_create-5095ec02e20c7242.yaml  memcached-fix-lock-release-I6fc33b8e0a88510.yaml  memcached-tls-support_7dc1a652ff087b83.yaml  mysql-0.10.0-7660f75a1c57a920.yaml  mysql-tls-support-88941e2ebaf938b4.yaml  new-join_group-default-4b765e828bc2a7b8.yaml  partitioner-4005767d287dc7c9.yaml  redis-connect-retries-c9adfc81eb06a4ab.yaml  redis-health-check-f5e3cb15dd3ac90c.yaml  redis-username-9c552b61db4cfbec.yaml  remove-consul-driver-c651f6bbb559839c.yaml  remove-etcd-driver-1855b82d7fba106f.yaml  remove-etcd3-driver-dbce7649a08036c5.yaml  remove-windows-1a58a6af889e45a3.yaml  remove-zake-5804269acbb7539e.yaml  sentinel-ssl-and-auth-5cccced6685099b9.yaml  zookeeper_tls-808355fd2ab1acae.yaml
releasenotes/source/: conf.py  index.rst
stubs/sysv_ipc/: __init__.pyi
tools/: compat-matrix.py  pretty_tox.sh
tooz/: __init__.py  _retry.py  coordination.py  hashring.py  locking.py  models.py  partitioner.py  utils.py
tooz/drivers/: _retry.py  consul.py  etcd.py  etcd3.py  etcd3gw.py  file.py  ipc.py  kubernetes.py  memcached.py  mysql.py  pgsql.py  redis.py  zake.py  zookeeper.py
tooz/openstack/common/: excutils.py  fileutils.py  gettextutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  network_utils.py  strutils.py
tooz/tests/: __init__.py  test_coordination.py  test_etcd.py  test_etcd3.py  test_file.py  test_hashring.py  test_kubernetes.py  test_memcache.py  test_mysql.py  test_partitioner.py  test_postgresql.py  test_utils.py
tooz/tests/drivers/: test_etcd.py  test_etcd3.py  test_etcd3gw.py  test_file.py  test_memcache.py  test_memcached.py  test_mysql.py  test_postgresql.py  test_retry.py
