[metadata]
name = tooz
author = Tooz developers
author-email = tooz-dev@lists.launchpad.net
summary = Coordination library for distributed systems.
description-file = README.rst
license = Apache-2
home-page = https://launchpad.net/python-tooz
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Topic :: System :: Distributed Computing

[files]
packages =
    tooz

[entry_points]
tooz.backends =
    kazoo = tooz.drivers.zookeeper:KazooDriver
    zake = tooz.drivers.zake:ZakeDriver
    memcached = tooz.drivers.memcached:MemcachedDriver
    ipc = tooz.drivers.ipc:IPCDriver
    redis = tooz.drivers.redis:RedisDriver
    postgresql = tooz.drivers.pgsql:PostgresDriver
    mysql = tooz.drivers.mysql:MySQLDriver
    file = tooz.drivers.file:FileDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
