[metadata]
name = tooz
author = Tooz developers
author-email = tooz-dev@lists.launchpad.net
summary = Coordination library for distributed systems.
description-file = README.rst
license = Apache-2
home-page = http://docs.openstack.org/developer/tooz
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: System :: Distributed Computing

[files]
packages =
    tooz

[entry_points]
tooz.backends =
    etcd = tooz.drivers.etcd:EtcdDriver
    kazoo = tooz.drivers.zookeeper:KazooDriver
    zake = tooz.drivers.zake:ZakeDriver
    memcached = tooz.drivers.memcached:MemcachedDriver
    ipc = tooz.drivers.ipc:IPCDriver
    redis = tooz.drivers.redis:RedisDriver
    postgresql = tooz.drivers.pgsql:PostgresDriver
    mysql = tooz.drivers.mysql:MySQLDriver
    file = tooz.drivers.file:FileDriver
    zookeeper = tooz.drivers.zookeeper:KazooDriver
    consul = tooz.drivers.consul:ConsulDriver

[extras]
consul =
  python-consul>=0.4.7 # MIT License
etcd =
  requests>=2.10.0 # Apache-2.0
zake =
  zake>=0.1.6 # Apache-2.0
redis =
  redis>=2.10.0 # MIT
postgresql =
  psycopg2>=2.5 # LGPL/ZPL
mysql =
  PyMySQL>=0.6.2 # MIT License
zookeeper =
  kazoo>=2.2 # Apache-2.0
memcached =
  pymemcache!=1.3.0,>=1.2.9 # Apache 2.0 License
ipc =
  sysv-ipc>=0.6.8 # BSD License
test =
  mock>=2.0 # BSD
  python-subunit>=0.0.18 # Apache-2.0/BSD
  testrepository>=0.0.18 # Apache-2.0/BSD
  testtools>=1.4.0 # MIT
  coverage>=3.6 # Apache-2.0
  fixtures>=3.0.0 # Apache-2.0/BSD
  pifpaf>=0.10.0 # Apache-2.0
doc =
  sphinx!=1.3b1,<1.3,>=1.2.1 # BSD
  oslosphinx!=3.4.0,>=2.5.0 # Apache-2.0

[pbr]
warnerrors = True

[wheel]
universal = 1

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
