[metadata]
name = tooz
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = Coordination library for distributed systems.
description-file = README.rst
license = Apache-2
home-page = https://docs.openstack.org/tooz/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: System :: Distributed Computing

[files]
packages =
    tooz

[entry_points]
tooz.backends =
    etcd = tooz.drivers.etcd:EtcdDriver
    etcd3 = tooz.drivers.etcd3:Etcd3Driver
    etcd3+http = tooz.drivers.etcd3gw:Etcd3Driver
    etcd3+https = tooz.drivers.etcd3gw:Etcd3Driver
    kazoo = tooz.drivers.zookeeper:KazooDriver
    zake = tooz.drivers.zake:ZakeDriver
    memcached = tooz.drivers.memcached:MemcachedDriver
    ipc = tooz.drivers.ipc:IPCDriver
    redis = tooz.drivers.redis:RedisDriver
    postgresql = tooz.drivers.pgsql:PostgresDriver
    mysql = tooz.drivers.mysql:MySQLDriver
    file = tooz.drivers.file:FileDriver
    zookeeper = tooz.drivers.zookeeper:KazooDriver
    consul = tooz.drivers.consul:ConsulDriver

[extras]
consul =
  python-consul2>=0.0.16 # MIT License
etcd =
  requests>=2.10.0 # Apache-2.0
etcd3 =
  etcd3>=0.12.0 # Apache-2.0
  grpcio>=1.18.0
etcd3gw =
  etcd3gw!=0.2.6,>=0.1.0 # Apache-2.0
zake =
  zake>=0.1.6 # Apache-2.0
redis =
  redis>=3.1.0 # MIT
postgresql =
  psycopg2>=2.5 # LGPL/ZPL
mysql =
  PyMySQL>=0.6.2 # MIT License
zookeeper =
  kazoo>=2.2 # Apache-2.0
memcached =
  pymemcache!=1.3.0,>=1.2.9 # Apache 2.0 License
ipc =
  sysv-ipc>=0.6.8 # BSD License
